# AdventOfCode

./: .gitignore  README.md  day14_image.txt  helper.py  helper.txt  main  main.rs  tmp
2015/python/: day09.py  day11.py  day19.py  day20.py
2015/rust/: Cargo.toml
2015/rust/src/: day01.rs  day09.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day23.rs
2016/rust/: Cargo.toml
2016/rust/src/: day01.rs  day02.rs  day02_generic.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
2021/python/: packet_decoder.py
2023/python/: aplenty.py  camel_cards.py  clumsy_crucible.py  cosmic_expansion.py  cube_conundrum.py  gear_ratios.py  hot_springs.py  hounted_wasteland.py  if_you_give_a_seed_a_fertilizer.py  lavaduct_lagoon.py  lens_library.py  mirage_maintenance.py  parabolic_reflector_dish.py  pipe_maze.py  point_of_incidence.py  pulse_propagation.py  scratchcards.py  step_counter.py  the_floor_will_be_lava.py  trebuchet.py  wait_for_it.py
2023/rust/: Cargo.toml  trebuchet.rs
2024/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day152.py  day16.py  day17.py  day18.py  day20.py  day21.py  day24.py  day25.py  utils.py
2025/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
2025/rust/: Cargo.toml
2025/rust/src/: day01.rs
