[package]
name = "advent_of_code_2016"
version = "0.1.0"

[dependencies]
csv = "1"
itertools = "0.12"
regex = "1.11.1"
md5="0.8.0"

[[bin]]
name="day01"
path="src/day01.rs"

[[bin]]
name="day02"
path="src/day02.rs"

[[bin]]
name="day02_generic"
path="src/day02_generic.rs"

[[bin]]
name="day03"
path="src/day03.rs"

[[bin]]
name="day04"
path="src/day04.rs"

[[bin]]
name="day05"
path="src/day05.rs"

[[bin]]
name="day06"
path="src/day06.rs"

[[bin]]
name="day07"
path="src/day07.rs"